Added employer model and handled form submission for Employer

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hotwired/turbo-rails": "^7.2.5",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.17.10",
+    "jquery-ui": "^1.13.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   },
